# Humi

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: PatchFile.cmake  PicoCommands.cmake  aht30.cmake  pico-sdk.cmake  pybind11.cmake
pid_tuning/: CMakeLists.txt  CMakePresets.json  pid_tuning.cpp  test_pid_tuning.py
src/: climate_sensor.c  climate_sensor.h  display.c  display.h  driver_aht30_interface.c  fan.c  fan.h  main.c  pid.c  pid.h  rotary_switch.c  rotary_switch.h
